--- a/README.mdx
+++ b/README.mdx
@@ -1,8 +1,13 @@
 ---
-title: Docs
-description:
+title: ## [essentials](https://acme-83ff5188.mintlify.app)
+site: ## [ai-tools](https://web4-6d3660.webflow.io/docs)
+description: 
 ---
-- [Claude Code setup](https://acme-83ff5188.mintlify.app/ai-tools/claude-code.md): Configure Claude Code for your documentation workflow
+
+## Documentation
+
+[Claude Code setup](https://acme-83ff5188.mintlify.app/ai-tools/claude-code.md): Configure Claude Code for your documentation workflow
+
 - [Cursor setup](https://acme-83ff5188.mintlify.app/ai-tools/cursor.md): Configure Cursor for your documentation workflow
 - [Windsurf setup](https://acme-83ff5188.mintlify.app/ai-tools/windsurf.md): Configure Windsurf for your documentation workflow
 - [Create Plant](https://acme-83ff5188.mintlify.app/api-reference/endpoint/create.md): Creates a new plant in the store
@@ -22,6 +27,8 @@ description:
 ---
 ## Optional
 
-- [Documentation](https://mintlify.com/docs)
-- [Blog](https://mintlify.com/blog)
+:[Documentation](https://mintlify.com/docs)
+
+ :[Blog](https://mintlify.com/blog)
+
 ---
