--- a/site/update.mdx
+++ b/site/update.mdx
@@ -1,5 +1,5 @@
-npm mint update
-```  [oai_citation:4‡acme-83ff5188.mintlify.app](https://acme-83ff5188.mintlify.app/development)
+```npm mint update
+[oai_citation:4‡acme-83ff5188.mintlify.app](https://acme-83ff5188.mintlify.app/development)
 
 --- 
 
@@ -8,6 +8,7 @@ The CLI has a built‑in tool to verify if your docs links are broken:
 
 ```bash
 mint broken-links
+
 ```  [oai_citation:5‡acme-83ff5188.mintlify.app](https://acme-83ff5188.mintlify.app/development)
 
 ---
